fixtures/semantic/invalid/03-vr-c5-default-not-in-axis.fl
component VariantDefault(
  variant tone: [primary, ghost] = danger
) {
  surface {}
}
